...
        
        return url
    }
    
    func logoutButtonTapped() {
        let alert = UIAlertController(
            title: "Выход.",
            message: "Вы действительно хотите выйти?",
            preferredStyle: .alert)
        
        alert.view.accessibilityIdentifier = "error"
        
        let dismissAction = UIAlertAction(title: "Нет.", style: .default) { _ in
            alert.dismiss(animated: true)
        }
        
        let tryAction = UIAlertAction(title: "Да!", style: .default) { _ in
            let profileLogoutService = ProfileLogoutService.shared
            profileLogoutService.logout()
        }
        
        alert.addAction(dismissAction)
        alert.addAction(tryAction)
...
